# SIGMA

./: .asetup.save  .clangd  .gitignore  CMakeLists.txt  README.md  benchmarking_results.md  mdt_hits.csv  report1.nsys-rep  report2.nsys-rep  report2.sqlite  rpc_hits.csv  todo.md
benchmarks/: benchmark_main.cu
include/: config.h  data_structures.h  line_math.h  math_utils.h  matrix_math.h  muon_segment.h  residual_math.h
src/: main.cpp
src/lib/: line_math.cu  matrix_math.cu  muon_segment.cu  residual_math.cu
tests/: test_common_includes.h  test_gpu_kernels.cu  test_math_utils.cu  test_math_utils.h  test_matrix_inversion.cu
tests/common/: test_data_utils.cu  test_data_utils.h  test_math_utils.cu
